fix excepciones y rutas
